--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/pex.jpg") top center;
+  background: url("../img/d2.webp") top center;
   background-size: cover;
 }
 
